--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,7 +21,7 @@ main {
 .privacy h1,
 .imprint h2,
 .privacy h2 {
-  @apply text-base lg:text-xl text-mint mb-10
+  @apply text-base lg:text-xl text-steel mb-10
 }
 
 .imprint h1,
@@ -39,7 +39,7 @@ main {
 }
 
 .privacy a {
-  @apply text-mint underline hover:no-underline underline-offset-2;
+  @apply text-steel underline hover:no-underline underline-offset-2;
 }
 
 p {
@@ -51,7 +51,7 @@ p:last-of-type {
 }
 
 strong {
-  @apply font-seria font-medium;
+  @apply font-lato-black font-black;
 }
 
 
@@ -82,7 +82,7 @@ sup {
 }
 
 .fancybox__backdrop {
-  @apply !bg-charcoal bg-opacity-90;
+  @apply !bg-steel bg-opacity-90;
 }
 
 .fancybox__toolbar {
@@ -104,7 +104,7 @@ sup {
 }
 
 .badge {
-  @apply bg-charcoal p-6 lg:p-8 text-sm leading-none text-white inline-flex items-center justify-between rounded-sm space-x-4 mr-6 mt-6 lg:mr-12 lg:mt-12 last-of-type:mr-0 cursor-pointer hover:bg-mint transition-all
+  @apply bg-steel p-6 lg:p-8 text-sm leading-none text-white inline-flex items-center justify-between rounded-sm space-x-4 mr-6 mt-6 lg:mr-12 lg:mt-12 last-of-type:mr-0 cursor-pointer hover:bg-steel transition-all
 }
 
 .badge svg {
