--- a/resources/views/partials/components/headings/h2.antlers.html
+++ b/resources/views/partials/components/headings/h2.antlers.html
@@ -1,3 +1,3 @@
-<h2 class="font-seria font-medium text-mint mb-10 lg:mb-25 text-lg lg:text-3xl leading-[1.2] {{ class }}">
+<h2 class="font-lato-black font-black text-steel mb-10 lg:mb-25 text-lg lg:text-3xl leading-[1.2] {{ class }}">
   {{ title }}
 </h2>
