--- a/resources/views/partials/components/headings/h3.antlers.html
+++ b/resources/views/partials/components/headings/h3.antlers.html
@@ -1,3 +1,3 @@
-<h3 class="uppercase font-seria text-md mb-6 {{ class }}">
+<h3 class="font-lato-black font-black uppercase text-steel {{ class }}">
   {{ title }}
 </h3>
