--- a/resources/views/partials/components/table/thead.antlers.html
+++ b/resources/views/partials/components/table/thead.antlers.html
@@ -6,7 +6,7 @@
       </div>
     </th>
   </tr>
-  <tr class="sticky top-230 bg-white md:relative md:bg-transparent md:top-0 z-60 [&>th]:py-12 [&>th]:align-middle [&>th]:leading-none [&>th]:font-seria [&>th]:font-medium [&>th]:text-mint">
+  <tr class="sticky top-230 bg-white md:relative md:bg-transparent md:top-0 z-60 [&>th]:py-12 [&>th]:align-middle [&>th]:leading-none [&>th]:font-lato-black [&>th]:font-black [&>th]:text-steel">
     <th class="text-left w-[8%] sm:w-[10%]">Nr.</th>
     <th class="text-left w-[12%] sm:w-[8%]">Etage</th>
     <th class="text-left w-[4%]">
