--- a/resources/views/partials/components/table/trow.antlers.html
+++ b/resources/views/partials/components/table/trow.antlers.html
@@ -6,6 +6,6 @@
     data-object-floor="{{ floor }}"
     data-object-rooms="{{ rooms }}"
   {{ /if }}
-  class="border-b border-b-white bg-transparent hover:bg-mint hover:bg-opacity-20 transition-all duration-150">
+  class="border-b border-b-white bg-transparent hover:bg-steel hover:bg-opacity-20 transition-all duration-150">
   {{ slot }}
 </tr>
