--- a/resources/views/partials/layout/body.antlers.html
+++ b/resources/views/partials/layout/body.antlers.html
@@ -1,4 +1,4 @@
-<body class="antialiased font-helvetica text-charcoal text-sm lg:text-base leading-[1.45] flex min-h-screen flex-col" x-data="{ menu: false }">
+<body class="antialiased font-lato-regular text-black text-base lg:text-md leading-[1.45] flex min-h-screen flex-col" x-data="{ menu: false }">
   {{ slot:header }}
   {{ slot }}
   {{ slot:footer }}
