--- a/resources/views/partials/layout/footer.antlers.html
+++ b/resources/views/partials/layout/footer.antlers.html
@@ -1,56 +1,45 @@
-<footer class="text-mint font-seria font-medium leading-[1.3] pt-15 lg:pt-30">
-  {{ partial:layout/inner }}
-  <div class="grid grid-cols-12 gap-16 items-end text-base">
-    <div class="col-span-2 md:col-span-1 mb-2">
-      <a 
-        href="https://www.cavegn-immobilien.ch"
-        target="_blank" 
-        title="Zur Website von Cavegn Immobilien">
-        {{ partial:icons/logo-marketer class="block w-auto h-100 md:h-120" }}
-      </a>
-    </div>
-    <div class="col-span-10 md:col-span-5 lg:col-span-6 sm:grid sm:grid-cols-6 gap-16">
-      <div class="mb-16 sm:mb-0 sm:col-span-3 md:col-span-6 lg:col-span-3">
-        Cavegn Immobilien GmbH<br>
-        Auf der Mauer 7<br>
-        8001 Zürich
+<footer class="bg-steel text-white text-sm lg:text-base">
+  {{ partial:layout/inner class="lg:!py-30" }}
+    <div class="grid grid-cols-12 gap-x-20">
+      <div class="col-span-6 md:flex md:gap-x-40 lg:gap-x-80">
+        <div>
+          <h3 class="font-lato-black font-black uppercase">Apleona Schweiz AG</h3>
+          <p>Kornhausgasse 7<br>4051 Basel</p>
+        </div>
+        <div class="mt-20 md:mt-3 lg:mt-6">
+          {{ partial:icons/logo-marketer class="block w-150 lg:w-200 h-auto" }}
+        </div>
       </div>
-      <div class="sm:col-span-3 md:col-span-6 lg:col-span-3">
-        <a 
-          href="tel:043 537 33 53"
-          class="no-underline hover:underline underline-offset-4">
-          Telefon 043 537 33 53
-        </a><br>
-        <a 
-          href="mailto:zoe@cavegn-immobilien.ch" 
-          title="E-Mail an zoe@cavegn-immobilien.ch"
-          class="no-underline hover:underline underline-offset-4">
-          zoe@cavegn-immobilien.ch
-        </a><br>
-        <a href="https://www.cavegn-immobilien.ch" 
-          target="_blank" 
-          title="Zur Website von Cavegn Immobilien" 
-          rel="noopener noreferrer"
-          class="no-underline hover:underline underline-offset-4">
-          www.cavegn-immobilien.ch
-        </a>
+      <div class="col-span-6 flex justify-end items-end leading-[1.6] -mb-4 text-right">
+        <ul>
+          <li>
+            <a 
+              href="/impressum" 
+              title="Impressum"
+              class="hover:text-cloud transition-all">
+              Impressum
+            </a>
+          </li>
+          <li>
+            <a 
+              href="/datenschutz" 
+              title="Datenschutz"
+              class="hover:text-cloud transition-all">
+              Datenschutz
+            </a>
+          </li>
+          <li>
+            <a 
+              href="https://stoz.ch" 
+              title="design by stoz" 
+              target="_blank"
+              class="hover:text-cloud transition-all">
+              design by stoz
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="col-span-3 col-start-3 sm:col-span-5 sm:col-start-3 md:col-span-3 lg:col-span-2 lg:mb-15">
-      Follow us!<br>
-      <a href="https://www.instagram.com/ cavegn_immobilien_zh/" 
-        target="_blank" 
-        title="Follow us on Instagram!" 
-        rel="noopener noreferrer"
-        class="block group mt-2">
-        {{ partial:icons/instagram class="md:w-24 h-auto group-hover:rotate-6 transition-transform" }}
-      </a>
-    </div>
-    <div class="col-span-3 sm:col-span-5 md:col-span-3 md:col-start-10 lg:col-start-11 lg:mb-20">
-      <a href="/impressum" class="no-underline hover:underline underline-offset-4">Impressum</a><br>
-      <a href="/datenschutz" class="no-underline hover:underline underline-offset-4">Datenschutz</a><br>
-    </div>
-  </div>
   {{ /partial:layout/inner }}
 </footer>
 {{ vite src="resources/js/app.js" }}
