--- a/resources/views/partials/layout/grid.antlers.html
+++ b/resources/views/partials/layout/grid.antlers.html
@@ -1,3 +1,3 @@
-<div class="sm:grid sm:grid-cols-12 sm:gap-24 lg:gap-40 {{ class }}">
+<div class="md:grid md:grid-cols-12 md:gap-x-20 lg:gap-x-40 {{ class }}">
   {{ slot }}
 </div>
