--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -1,25 +1,24 @@
 <header 
-  class="bg-white h-80 lg:h-124 w-full sticky top-0 z-[100] shadow-md md:!shadow-lg transition-all"
-  :class="{ '!shadow-none': menu === true }">
+  class="bg-steel h-80 lg:h-120 w-full sticky top-0 z-[100]">
   <div 
-    :class="{ '!h-[320px] shadow-md': menu === true }"
-    class="max-w-6xl mx-auto w-full bg-white h-full lg:!h-124 md:!shadow-none flex justify-between items-start lg:items-center px-15 lg:px-30 pt-20 lg:pt-0">
+    class="max-w-6xl mx-auto w-full h-full lg:!h-120 flex justify-between items-center px-15 lg:px-30">
     <a 
       href="/"
-      title="Projekt">
-      {{ partial:icons/logo-project class="block w-auto h-40 lg:h-76" }}
+      title="Startseite Adlerstrasse Basel"
+      class="md:order-2">
+      {{ partial:icons/logo-project class="block w-auto h-40 lg:h-60" }}
     </a>
     <a 
       href="javascript:;" 
       x-on:click="menu = ! menu" 
       title="{{ "Menü anzeigen" | trans }}"
       :class="{ 'is-active': menu === true }"
-      class="group mt-12 flex justify-center md:hidden text-charcoal">
+      class="group flex justify-center md:hidden text-steel">
       <span x-show="menu === false">
-        {{ partial:icons/burger class="w-24 h-auto" }}
+        {{ partial:icons/burger class="w-24 h-auto text-white" }}
       </span>
       <span x-cloak x-show="menu === true">
-        {{ partial:icons/cross class="w-20 h-auto" }}
+        {{ partial:icons/cross class="w-20 h-auto text-white" }}
       </span>
     </a>
     {{ partial:menu/wrapper }}
