--- a/resources/views/partials/layout/inner.antlers.html
+++ b/resources/views/partials/layout/inner.antlers.html
@@ -1,3 +1,3 @@
-<div class="max-w-6xl mx-auto px-15 lg:px-30 py-20 md:pt-30 md:pb-40 {{ class }}">
+<div class="max-w-6xl mx-auto px-15 lg:px-30 py-25 lg:py-50 {{ class }}">
   {{ slot }}
 </div>
