--- a/resources/views/partials/objects/filter.antlers.html
+++ b/resources/views/partials/objects/filter.antlers.html
@@ -1,10 +1,10 @@
 {{ partial:layout/grid class="sm:!gap-16 lg:!gap-20 mb-40 md:mb-60 lg:mb-80" }}
 
   {{ partial:layout/span class="lg:!col-span-3" }}
-    <div class="uppercase font-seria font-medium text-mint text-md tracking-wider">Verfügbarkeit</div>
+    <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Verfügbarkeit</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-mint font-seria font-medium rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-state" 
         aria-label="Verfügbarkeit">
         <option value="NULL">Alle Wohnungen</option>
@@ -16,10 +16,10 @@
   {{ /partial:layout/span }}
   
   {{ partial:layout/span class="lg:!col-span-3" }}
-    <div class="uppercase font-seria font-medium text-mint text-md tracking-wider">Zimmer</div>
+    <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Zimmer</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-mint font-seria font-medium rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-rooms" 
         aria-label="Zimmer">
         <option value="NULL">Alle Zimmer</option>
@@ -31,10 +31,10 @@
   {{ /partial:layout/span }}
 
   {{ partial:layout/span class="lg:!col-span-3" }}
-    <div class="uppercase font-seria font-medium text-mint text-md tracking-wider">Etage</div>
+    <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Etage</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-mint font-seria font-medium rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-floor" 
         aria-label="Etage">
         <option value="NULL">Alle Etagen</option>
@@ -50,7 +50,7 @@
   {{ /partial:layout/span }}
   
   {{ partial:layout/span class="lg:!col-span-3 flex items-end" }}
-    <button class="js-btn-reset bg-stone text-white px-15 py-12 w-full h-45 mt-16 rounded-sm uppercase font-seria font-medium text-base 2xl:text-md tracking-wider flex items-center justify-center hover:brightness-110 transition-all">
+    <button class="js-btn-reset bg-steel text-white px-15 py-12 w-full h-45 mt-16 rounded-sm uppercase font-lato-black font-black text-base 2xl:text-md tracking-wider flex items-center justify-center hover:brightness-110 transition-all">
       Filter zurücksetzen
     </button>
   {{ /partial:layout/span }}
