--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -44,7 +44,7 @@
               {{ partial:components/table/tcell class="text-xxs sm:text-sm text-right align-middle !pr-0" }}
                 {{ if state == 'available' }}
                 <a href="/kontakt?whg={{ number }}#formular"
-                  class="font-medium text-white hover:brightness-110 bg-mint transition-all inline-flex items-center px-5 h-25 rounded-sm leading-none">
+                  class="font-lato-black font-black text-white hover:brightness-110 bg-steel transition-all inline-flex items-center px-5 h-25 rounded-sm leading-none">
                   Anfrage
                 </a>
                 {{ elseif state == 'reserved' }}
@@ -60,7 +60,7 @@
 
       {{ partial:components/table/table class="mb-20 lg:mb-40" }}
         <thead class="border-b border-b-mint {{ class }}">
-          <tr class="md:relative md:bg-transparent md:top-0 z-60 [&>th]:py-12 [&>th]:align-middle [&>th]:leading-none [&>th]:font-seria [&>th]:font-medium [&>th]:text-mint">
+          <tr class="md:relative md:bg-transparent md:top-0 z-60 [&>th]:py-12 [&>th]:align-middle [&>th]:leading-none [&>th]:font-lato-black [&>th]:font-black [&>th]:text-steel">
             <th class="text-left w-[25%]">Typ</th>
             <th class="text-left w-[10%]">Etage</th>
             <th class="text-right w-[65%]">Preis<sup class="pl-2">3</sup></th>
@@ -116,7 +116,7 @@
           <a 
             href="/kontakt/#formular" 
             title="Kontaktformular" 
-            class="bg-mint text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-seria tracking-wider inline-flex items-center justify-center hover:brightness-110 transition-all">
+            class="bg-steel text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-lato-black font-black tracking-wider inline-flex items-center justify-center hover:brightness-110 transition-all">
             <span class="block leading-none">Kontaktformular</span>
           </a>
         </div>
