--- a/resources/views/email/html/contact-user.antlers.html
+++ b/resources/views/email/html/contact-user.antlers.html
@@ -12,5 +12,5 @@
       {{ /if }}
     {{ /fields }}
   </table>
-  <p>Freundliche Grüsse<br>Cavegn Immobilien GmbH, Zürich</p>
+  <p>Freundliche Grüsse<br>APLEONA SCHWEIZ AG, Basel</p>
 </div>
