--- a/resources/views/partials/components/table/thead.antlers.html
+++ b/resources/views/partials/components/table/thead.antlers.html
@@ -1,4 +1,4 @@
-<thead class="border-b border-b-mint {{ class }}">
+<thead class="border-b border-b-steel {{ class }}">
   <tr class="bg-white sticky top-78 z-50 md:hidden">
     <th colspan="8">
       <div class="py-10">
@@ -13,13 +13,13 @@
       Zi
     </th>
     <th class="text-right w-[8%]">
-      BWF<sup class="pl-2">1</sup>
+      HNF<sup class="pl-2">1</sup>
     </th>
     <th class="text-right w-[8%] sm:table-cell">
       AF<sup class="pl-2">2</sup>
     </th>
     <th class="text-right w-[10%] sm:w-[17%]">
-      Preis<sup class="pl-2">3</sup>
+      MZ/MT<sup class="pl-2">3</sup>
     </th>
     <th class="text-center w-[13%]">
       Plan
