--- a/resources/views/impressum.antlers.html
+++ b/resources/views/impressum.antlers.html
@@ -2,26 +2,19 @@
   {{ partial:layout/inner }}
     <h1>Impressum</h1>
     <p>
-      Cavegn Immobilien GmbH<br>
-      Auf der Mauer 7<br>
-      8001 Zürich<br>
-      <a 
-        href="mailto:zoe@cavegn-immobilien.ch" 
+      Apleona Schweiz AG<br>
+      Industriestrasse 21<br>
+      8304 Wallisellen<br>
+      <a href="https://www.apleona.ch" 
         target="_blank" 
         rel="noopener" 
         class="hover:underline underline-offset-2 decoration-1">
-        zoe@cavegn-immobilien.ch
-      </a><br>
-      <a href="https://www.cavegn-immobilien.ch" 
-        target="_blank" 
-        rel="noopener" 
-        class="hover:underline underline-offset-2 decoration-1">
-        www.cavegn-immobilien.ch
+        www.apleona.ch
       </a>
     </p>
-    <h2>Design und Entwicklung</h2>
+    <h1>Design und Entwicklung</h1>
     <p>Stoz Werbeagentur AG<br>Barzloostrasse 2<br>8330 Pfäffikon ZH<br><a href="mailto:hello@stoz.ch" target="_blank" class="hover:underline underline-offset-2 decoration-1">hello@stoz.ch</a><br><a href="https://www.stoz.ch" target="_blank" rel="noopener" class="hover:underline underline-offset-2 decoration-1">www.stoz.ch</a></p>
-    <h2>Programmierung</h2>
+    <h1>Programmierung</h1>
     <p>Marcel Stadelmann, Zürich<br><a href="https://marceli.to" target="_blank" rel="noopener" class="hover:underline underline-offset-2 decoration-1">marceli.to</a></p>
   {{ /partial:layout/inner }}
 {{ /partial:layout/section }}
