--- a/resources/views/partials/components/table/trow.antlers.html
+++ b/resources/views/partials/components/table/trow.antlers.html
@@ -2,10 +2,11 @@
   {{ if filterable }}
     data-object
     data-object-number="{{ number }}"
+    data-object-building="{{ building }}"
     data-object-state="{{ state }}"
     data-object-floor="{{ floor }}"
     data-object-rooms="{{ rooms }}"
   {{ /if }}
-  class="border-b border-b-white bg-transparent hover:bg-steel hover:bg-opacity-20 transition-all duration-150">
+  class="border-b border-b-steel bg-transparent hover:bg-steel hover:bg-opacity-20 transition-all duration-150">
   {{ slot }}
 </tr>
