--- a/resources/views/partials/menu/wrapper.antlers.html
+++ b/resources/views/partials/menu/wrapper.antlers.html
@@ -8,7 +8,7 @@
   x-transition:leave-start="opacity-100"
   x-transition:leave-end="opacity-0"
   class="bg-cloud md:bg-transparent fixed left-0 top-80 h-[calc(100vh_-_80px)] md:h-auto md:top-0 md:!block md:relative md:order-1 w-full">
-  <nav class="uppercase px-15 py-30 md:mt-28 lg:mt-44">
+  <nav class="uppercase px-15 py-30 md:py-0 md:px-0 md:mt-28 lg:mt-44">
     <ul class="flex flex-col gap-y-15 md:gap-y-0 md:gap-x-20 lg:gap-x-30 md:flex-row">
       {{ nav:main }}
         {{ partial:menu/item }}
