--- a/resources/views/partials/objects/filter.antlers.html
+++ b/resources/views/partials/objects/filter.antlers.html
@@ -4,13 +4,13 @@
     <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Verfügbarkeit</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-regular rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-state" 
         aria-label="Verfügbarkeit">
         <option value="NULL">Alle Wohnungen</option>
         <option value="available">frei</option>
         <option value="reserved">reserviert</option>
-        <option value="sold">verkauft</option>
+        <option value="rented">vermietet</option>
       </select>
     </div>
   {{ /partial:layout/span }}
@@ -19,10 +19,11 @@
     <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Zimmer</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-regular rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-rooms" 
         aria-label="Zimmer">
         <option value="NULL">Alle Zimmer</option>
+        <option value="1.5">1.5</option>
         <option value="2.5">2.5</option>
         <option value="3.5">3.5</option>
         <option value="4.5">4.5</option>
@@ -31,26 +32,40 @@
   {{ /partial:layout/span }}
 
   {{ partial:layout/span class="lg:!col-span-3" }}
+    <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Hausteil</div>
+    <div>
+      <select 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-regular rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        data-filterType="object-building" 
+        aria-label="Etage">
+        <option value="NULL">Alle Hausteile</option>
+        <option value="h1">Haus 1</option>
+        <option value="h2">Haus 2</option>
+        <option value="h3">Haus 3</option>
+        <option value="h4">Haus 4</option>
+      </select>
+    </div>
+  {{ /partial:layout/span }}
+
+  {{ partial:layout/span class="lg:!col-span-3" }}
     <div class="uppercase font-lato-black font-black text-steel text-md tracking-wider">Etage</div>
     <div>
       <select 
-        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-black font-black rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
+        class="js-filter-attribute appearance-none bg-[url(../icons/chevron-down.svg)] bg-[length:15px_auto] bg-[right_1rem_center] bg-no-repeat !outline-none bg-steel font-lato-regular rounded-sm text-white text-base 2xl:text-md py-10 px-16 mt-10 w-full h-45" 
         data-filterType="object-floor" 
         aria-label="Etage">
         <option value="NULL">Alle Etagen</option>
+        <option value="hg">HG</option>
         <option value="eg">EG</option>
         <option value="1.og">1. OG</option>
         <option value="2.og">2. OG</option>
-        <option value="3.og">3. OG</option>
-        <option value="4.og">4. OG</option>
-        <option value="5.og">5. OG</option>
-        <option value="attika">Attika</option>
+        <option value="dg">DG</option>
       </select>
     </div>
   {{ /partial:layout/span }}
   
   {{ partial:layout/span class="lg:!col-span-3 flex items-end" }}
-    <button class="js-btn-reset bg-steel text-white px-15 py-12 w-full h-45 mt-16 rounded-sm uppercase font-lato-black font-black text-base 2xl:text-md tracking-wider flex items-center justify-center hover:brightness-110 transition-all">
+    <button class="js-btn-reset bg-cloud text-pewter px-15 py-12 w-full h-45 mt-8 lg:mt-0 rounded-sm flex items-center justify-start hover:brightness-110 transition-all">
       Filter zurücksetzen
     </button>
   {{ /partial:layout/span }}
