--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -16,8 +16,7 @@
     <div>
       <a 
         href="/angebot" 
-        target="_blank" 
-        title="Unser Angebot"
+        title="Angebot anzeigen"
         class="bg-steel text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-lato-black font-black tracking-wider flex items-center w-full justify-center hover:brightness-110 hover:text-cloud transition-all">
         <span class="block leading-none">Angebot</span>
       </a>
