--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -6,6 +6,8 @@
 
   {{ partial:layout/span class="!col-span-full md:!col-span-7 lg:!col-span-6" }}
 
+    {{# {{ livewire:apartments }} #}}
+
     {{ partial:objects/building building="h1" title="Haus 1 – Alderstrasse 30" }}
     {{ partial:objects/building building="h2" title="Haus 2 – Alderstrasse 32" }}
 
