--- a/resources/views/projekt.antlers.html
+++ b/resources/views/projekt.antlers.html
@@ -8,30 +8,30 @@
     {{ partial:layout/grid }}
       {{ partial:layout/span }}
         <p>Mit dem Projekt Adlerstrasse werden an zentraler und begehrter Lage frisch sanierte 1.5- bis 5.5-Zimmerwohnungen verfügbar. Die Wohnungen sind auf vier zusammenhängende Häuser verteilt, welche etappenweise saniert werden und in neuem Glanz erscheinen.</p>
-        <p>Ausgestattet mit hochwertigen Materialen bieten die Wohnungen ein zeitgemässes und komfortables Wohnen an. Die Mietwohnungen an Adlerstrasse überzeugen mit vielfältigen Grundrissvarianten und attraktiven, privaten Aussenbereichen, welche in den Innenhof gerichtet sind. Zusätzlich stehen den Mietern 35 Einstellplätze und vier Bastelräume zur Anmietung zur Verfügung, was zusätzlichen Komfort und Flexibilität bietet.</p>
-        <p>Im Hinterhof der Überbauung verbirgt sich ein idyllischer Spielplatz, umgeben von Bäumen und Sträuchern, der zum Verweilen und Spielen einlädt. Das Cheminée bietet zusätzlich kulinarische Erlebnisse im gemütlichen beisammen sein. Durch die Kombination der Städtischen Lage mit attraktiver Aussenanlage wurde eine ideale Lösung für Familien, junge Paare sowie Singles geschaffen.
-        <p>Dank der zentralen und begehrten Lage in Grossbasel profitieren die Bewohner von kurzen Wegen innerhalb der Stadt Basel. Eine hervorragende Infrastruktur sowie ausgezeichnete Anbindungen an den öffentlichen Verkehr sind gegeben, wobei der Bahnhof Basel nur zehn Minuten entfernt ist.</p>
-        <p>Die Überbauung zeichnet sich nicht nur durch ihre ausgezeichnete Lage aus, sondern auch durch einen vielfältigen Mix an Wohnungen und grosszügigem Aussenbereich.</p>
         {{ partial:components/headings/h3 title="Die Häuser werden in vier Etappen fertiggestellt" class="mt-20" }}
-        <table>
-          <tr>
-            <td class="pr-30 lg:pr-50">Haus 1 – Adlerstrasse 30:</td>
-            <td>1. September 2024</td>
-          </tr>
-          <tr>
-            <td>Haus 2 – Adlerstrasse 32:</td>
-            <td>1. Oktober 2024</td>
-          </tr>
-          <tr>
-            <td>Haus 3 – Adlerstrasse 34:</td>
-            <td>1. Dezember 2024</td>
-          </tr>
-          <tr>
-            <td>Haus 4 – Adlerstrasse 36:</td>
-            <td>1. Dezember 2024</td>
-          </tr>
-        </table>
-      {{ /partial:layout/span }}
+          <table class="mb-20">
+            <tr>
+              <td class="pr-30 lg:pr-50">Haus 1 – Adlerstrasse 30:</td>
+              <td>1. September 2024</td>
+            </tr>
+            <tr>
+              <td>Haus 2 – Adlerstrasse 32:</td>
+              <td>1. Oktober 2024</td>
+            </tr>
+            <tr>
+              <td>Haus 3 – Adlerstrasse 34:</td>
+              <td>1. Dezember 2024</td>
+            </tr>
+            <tr>
+              <td>Haus 4 – Adlerstrasse 36:</td>
+              <td>1. Dezember 2024</td>
+            </tr>
+          </table>
+          <p>Ausgestattet mit hochwertigen Materialien bieten die Wohnungen ein zeitgemässes und komfortables Wohnen an. Die Mietwohnungen an der Adlerstrasse überzeugen mit vielfältigen Grundrissvarianten und attraktiven, privaten Aussenbereichen, welche in den Innenhof gerichtet sind. Zusätzlich stehen den Mietern 35 Einstellplätze und vier Bastelräume zur Anmietung zur Verfügung, was zusätzlichen Komfort und Flexibilität bietet.</p>
+          <p>Im Hinterhof der Überbauung verbirgt sich ein idyllischer Spielplatz, umgeben von Bäumen und Sträuchern, der zum Verweilen und Spielen einlädt. Der Steingrill bietet zusätzlich kulinarische Erlebnisse im gemütlichen beisammen sein. Durch die Kombination der städtischen Lage mit attraktiver Aussenanlage wurde eine ideale Lösung für Familien, junge Paare sowie Singles geschaffen.</p>
+          <p>Dank der zentralen und begehrten Lage in Grossbasel profitieren die Bewohner von kurzen Wegen innerhalb der Stadt Basel. Eine hervorragende Infrastruktur sowie ausgezeichnete Anbindungen an den öffentlichen Verkehr sind gegeben, wobei der Bahnhof Basel nur zehn Minuten entfernt ist.</p>
+          <p>Die Überbauung zeichnet sich nicht nur durch ihre ausgezeichnete Lage aus, sondern auch durch einen vielfältigen Mix an Wohnungen und grosszügigem Aussenbereich.</p>
+        {{ /partial:layout/span }}
 
       {{ partial:layout/span }}
         {{ partial:components/media/image image="adlerstrasse-basel-3" alt="" wrapperClass="mb-20 lg:mb-40" }}
