--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -5,48 +5,61 @@
       {{ partial:layout/span }}
       
       {{ partial:components/headings/h3 title="Bodenbeläge" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeugplatten, unglasiert, SABAG Modico, anthrazit</p>
       
       {{ partial:components/headings/h3 title="Wandbeläge und Decken" }}
-      <p>Wände: Raufasertapete weiss gestrichen, in den Nasszellen, wo keine Platten vorhanden sind, Weissputz, weiss gestrichen Decken: Weissputzdecken, weiss gestrichen</p>
+      <p>Wände: Raufasertapete weiss gestrichen, in den Nasszellen wo keine Platten vorhanden sind, Weissputz, weiss gestrichen Decken: Weissputzdecken, weiss gestrichen</p>
 
       {{ partial:components/headings/h3 title="Küche" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
-
+      <p>
+        Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Rückwand: Feinsteigzeugplatten, SABAG Modico, hellgrau Decke: Weissputz, weiss gestrichen<br>Arbeitsplatte: Granit poliert, Steel Gray Küchenfronten/Küchenschränke: Kunstharz, Sandbeige seidenmatt<br>Geräte: Glaskeramik/Induktion, Dunstabzug (Flachschirmhaube), Geschirrspüler, Kühl- und Gefriergerät, Marke Siemens
+      </p>
       {{ partial:components/headings/h3 title="Badezimmer" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit Wände: Feinsteigzeugplatten, SABAG Modico, beige<br>Decke: Weissputz, weiss gestrichen<br>Sanitärapparate: Keramik weiss, Spiegelschrank weiss Armaturen: Chromeline<br>Duschwanne mit Vorhangschiene oder Badewanne</p>
 
       {{ partial:components/headings/h3 title="Aussenfläche" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Boden Sitzplatz: Zementplatten<br>Boden Balkon: Betonplatte, Monobeton, sicht<br>Balkongeländer: Hohlprofile Metall, pulverbeschichtet</p>
 
       {{ partial:components/headings/h3 title="Fenster" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Kunststofffenster: dreifach verglast, innen weiss, aussen mit Farbfolie anthrazit grau, Vorhangschiene</p>
 
       {{ partial:components/headings/h3 title="Storen und Sonnenschutz" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Fenster: Lamellenstoren, bronze, zum Teil Rollladen, bronze, Handantrieb<br>Balkone: Gelenkarmmarkisen ohne Volant, grau, Handkurbel</p>
 
       {{ partial:components/headings/h3 title="Elektroanlagen" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Sonnerie: Gegensprechanlage<br>Küchenmöbel: Einbauspots<br>Glasfaser: in jeder Wohnung, Mieter wählt selbstständig zwischen den Anbietern und schliesst ein Abonnement ab<br>Mehrere dreifach Steckdosen und Schalter in den Räumen, Multimedia-Verteiler im Eingangsbereich</p>
 
-      {{ partial:components/headings/h3 title="Heizungs- und Trocknungsraum" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      {{ partial:components/headings/h3 title="Heizungs- und Lüftungsanlagen" }}
+      <p>Beheizung mittels Heizkörper, Gasheizung<br>Die Abluft (Küche und Nasszellen) erfolgt über Dach. Frischluftzufuhr über Aussenluftdurchlass über den Fenstern.</p>
 
       {{ partial:components/headings/h3 title="Liftanlagen" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Pro Haus ein Personenaufzug für maximal sechs Personen</p>
 
       {{ partial:components/headings/h3 title="Keller" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Pro Wohnung ein Kellerabteil, mit Steckdose auf Wohnungszähler, Schliessung mit Zylinder auf Wohnungsschliessung</p>
 
       {{ partial:components/headings/h3 title="Waschküche und Trocknungsraum" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Jede Wohnung verfügt im Untergeschoss einen abschliessbaren Waschturm (Waschmaschine und Tumbler), Marke Siemens Trocknungsraum im UG pro Haus mit Secomat</p>
+
+      {{ partial:components/headings/h3 title="Veloabstellplätze" }}
+      <p>Veloräume mit zahlreichen Abstellplätzen, mögliche Ladestationen für E-Bikes (Steckdosen)</p>
 
       {{ partial:components/headings/h3 title="Entsorgung" }}
-      <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeug- platten, unglasiert, SABAG Modico, anthrazit</p>
+      <p>Vier Container in der Überbauung, Abstellflächen für Karton- und Zeitungslagerung vorhanden</p>
       
+      {{ partial:components/headings/h3 title="Parking" }}
+      <p>35 Einstellplätze davon 27 Einstellplätze mit Option E-Ladestation (Flachband für E-Mobilität vorbereitet)</p>
+
+      {{ partial:components/headings/h3 title="Bastelräume" }}
+      <p>Vier Bastelräume im UG</p>
+
+      {{ partial:components/headings/h3 title="Umgebung" }}
+      <p>Begrünte Aussenanlage mit Sitzbänken, Spielplatz und Steingrill</p>
+
       <div class="mt-15 lg:mt-30 flex space-x-15 lg:space-x-25">
         <div>
           <a 
-            href="/assets/download/adlerstrasse-basel-kurzbaubeschrieb.pdf" 
+            href="/assets/downloads/adlerstrasse-basel-kurzbaubeschrieb.pdf" 
             target="_blank" 
             title="Kurzbaubeschrieb"
             class="bg-steel text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-lato-black font-black tracking-wider flex items-center w-full justify-center hover:brightness-110 hover:text-cloud transition-all">
@@ -55,7 +68,7 @@
         </div>
         <div>
           <a 
-            href="/assets/download/adlerstrasse-basel-facts-figures.pdf" 
+            href="/assets/downloads/adlerstrasse-basel-facts-figures.pdf" 
             target="_blank" 
             title="Facts & Figures"
             class="bg-steel text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-lato-black font-black tracking-wider flex items-center w-full justify-center hover:brightness-110 hover:text-cloud transition-all">
