--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -2,6 +2,7 @@
   {{ partial:components/swiper/wrapper }}
     {{ partial:components/swiper/slide image="adlerstrasse-basel-1" alt="" }}
     {{ partial:components/swiper/slide image="adlerstrasse-basel-2" alt="" }}
+    {{ partial:components/swiper/slide image="adlerstrasse-basel-3" alt="" }}
   {{ /partial:components/swiper/wrapper }}
 {{ /partial:layout/section }}
 
