--- a/resources/views/partials/components/table/thead.antlers.html
+++ b/resources/views/partials/components/table/thead.antlers.html
@@ -7,23 +7,13 @@
     </th>
   </tr>
   <tr class="sticky top-230 bg-white md:relative md:bg-transparent md:top-0 z-60 [&>th]:py-12 [&>th]:align-middle [&>th]:leading-none [&>th]:font-lato-black [&>th]:font-black [&>th]:text-steel">
-    <th class="text-left w-[8%] sm:w-[10%]">Nr.</th>
+    <th class="text-left w-[8%] sm:w-[12%]">Nr.</th>
     <th class="text-left w-[12%] sm:w-[8%]">Etage</th>
-    <th class="text-left w-[4%]">
-      Zi
-    </th>
-    <th class="text-right w-[8%]">
-      HNF<sup class="pl-2">1</sup>
-    </th>
-    <th class="text-right w-[8%] sm:table-cell">
-      AF<sup class="pl-2">2</sup>
-    </th>
-    <th class="text-right w-[10%] sm:w-[17%]">
-      MZ/MT<sup class="pl-2">3</sup>
-    </th>
-    <th class="text-center w-[13%]">
-      Plan
-    </th>
+    <th class="text-left w-[4%]">Zi</th>
+    <th class="text-right w-[8%]">HNF m<sup>2</sup></th>
+    {{# <th class="text-right w-[8%]">AF m<sup>2</sup></th> #}}
+    <th class="text-right w-[10%] sm:w-[16%]">Brutto MZ/MT</th>
+    <th class="text-center w-[10%]">Grundriss</th>
     <th class="text-right w-[14%]">Anmeldung</th>
   </tr>
 </thead>
