--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -6,10 +6,7 @@
 
   {{ partial:layout/span class="!col-span-full md:!col-span-7 lg:!col-span-6" }}
 
-    {{# {{ livewire:apartments }} #}}
-
-    {{ partial:objects/building building="h1" title="Haus 1 – Alderstrasse 30" }}
-    {{ partial:objects/building building="h2" title="Haus 2 – Alderstrasse 32" }}
+    {{ livewire:apartments }}
 
     <table class="text-xs lg:text-sm">
       <tr>
@@ -18,10 +15,6 @@
       </tr>
       <tr>
         <td class="align-top w-8"><sup>2</sup></td>
-        <td>Aussenfläche</td>
-      </tr>
-      <tr>
-        <td class="align-top w-8"><sup>3</sup></td>
         <td>Bruttomietzins pro Monat, in CHF</td>
       </tr>
     </table>
