--- a/resources/views/partials/layout/header.antlers.html
+++ b/resources/views/partials/layout/header.antlers.html
@@ -2,6 +2,7 @@
   class="bg-steel h-80 lg:h-120 w-full sticky top-0 z-[100]">
   <div 
     class="max-w-6xl mx-auto w-full h-full lg:!h-120 flex justify-between items-center px-15 lg:px-30">
+    {{ partial:menu/items class="hidden md:block" }}
     <a 
       href="/"
       title="Startseite Adlerstrasse Basel"
