--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -1,10 +1,14 @@
+<div class="sticky top-80 pt-30 z-50 w-full bg-white">
+  {{ partial:objects/iso class="h-150 w-auto block overflow-visible" }}
+</div>
+
 {{ partial:layout/grid }}
     
   {{ partial:layout/span class="hidden md:block md:!col-span-5 lg:!col-span-6 md:pt-30 lg:pt-50" }}
     {{ partial:objects/iso class="sticky top-120 w-full h-auto block mb-40 lg:mb-80 py-[12%] -my-[12%] overflow-visible" }}
   {{ /partial:layout/span }}
 
-  {{ partial:layout/span class="!col-span-full md:!col-span-7 lg:!col-span-6" }}
+  {{ partial:layout/span class="!col-span-full md:!col-span-7 lg:!col-span-6 relative z-20" }}
 
     {{ livewire:apartments }}
 
