--- a/resources/views/partials/objects/objects.antlers.html
+++ b/resources/views/partials/objects/objects.antlers.html
@@ -1,4 +1,4 @@
-<div class="sticky top-80 pt-30 z-50 w-full bg-white">
+<div class="sticky top-80 pt-30 z-50 w-full bg-white md:hidden">
   {{ partial:objects/iso class="h-150 w-auto block overflow-visible" }}
 </div>
 
