--- a/resources/views/partials/objects/iso-sm.antlers.html
+++ b/resources/views/partials/objects/iso-sm.antlers.html
@@ -5,7 +5,7 @@
         fill: url(#Unbenannter_Verlauf_3) !important;
       }
     </style>
-    <linearGradient data-name="Unbenannter Verlauf 3" x1="480.7" y1="344.9" x2="455.9" y2="176.6" gradientUnits="userSpaceOnUse">
+    <linearGradient id="Unbenannter_Verlauf_3" x1="480.7" y1="344.9" x2="455.9" y2="176.6" gradientUnits="userSpaceOnUse">
       <stop offset=".1" stop-color="#fff"/>
       <stop offset="1" stop-color="#bbce92"/>
     </linearGradient>
