--- a/resources/views/partials/objects/iso-sm.antlers.html
+++ b/resources/views/partials/objects/iso-sm.antlers.html
@@ -1,10 +1,10 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 968.4 479.6" class="{{ class }}">
   <defs>
-    <style>
+    {{# <style>
       .iso-cls-10 {
         fill: url(#Unbenannter_Verlauf_3) !important;
       }
-    </style>
+    </style> #}}
     <linearGradient id="Unbenannter_Verlauf_3" x1="480.7" y1="344.9" x2="455.9" y2="176.6" gradientUnits="userSpaceOnUse">
       <stop offset=".1" stop-color="#fff"/>
       <stop offset="1" stop-color="#bbce92"/>
@@ -811,7 +811,7 @@
     </g>
   </g>
   <g data-iso-area="Umgebung" class="no-transform">
-    <path class="iso-cls-10" d="M140.8,312.7l19.9,1.6,19.8,10.8,249.7-35.5-8.7-4.7,147.4-20.9,8.7,4.7,206.6-29.4-8.7-4.7v-71.5c.1,0,19.5-2.8,19.5-2.8l98.1,103.4-725.9,103.3-62.1-35.6-60.3-64.5,55.4-7.7v5.9c14.6,4.9,28.2,21.7,40.5,47.6Z"/>
+    <path class="iso-cls-10" style="fill: url(#Unbenannter_Verlauf_3);" d="M140.8,312.7l19.9,1.6,19.8,10.8,249.7-35.5-8.7-4.7,147.4-20.9,8.7,4.7,206.6-29.4-8.7-4.7v-71.5c.1,0,19.5-2.8,19.5-2.8l98.1,103.4-725.9,103.3-62.1-35.6-60.3-64.5,55.4-7.7v5.9c14.6,4.9,28.2,21.7,40.5,47.6Z"/>
     <path class="iso-cls-11" d="M775.5,162.9c7.3,3,15.8,7.3,19.2,9.9,13.5,10.3,19.5,28.2,29.5,41.7,3.5,4.7,7.5,8.9,12.4,12.1l56.4,37,75.3-23.3-100.5-90.9-92.4,13.4Z"/>
     <path class="iso-cls-11" d="M19,278.3c6.5,1.1,12.7,3.7,17.9,7.7,13.5,10.3,19.5,28.2,29.5,41.7,3.5,4.7,7.5,8.9,12.4,12.1l201.7,139.8,45.2-8.7-214.9-140.9c-5-3.2-9-7.4-12.4-12.1-10.1-13.6-16-31.4-29.5-41.7-5.2-4-22.7-12.1-29.1-13.2l-20.7,15.3Z"/>
     <path class="iso-cls-8" d="M617,318.7"/>
