--- a/resources/views/partials/objects/filter.antlers.html
+++ b/resources/views/partials/objects/filter.antlers.html
@@ -55,7 +55,7 @@
         data-filterType="object-floor" 
         aria-label="Etage">
         <option value="NULL">Alle Etagen</option>
-        {{# <option value="hg">HG</option> #}}
+        <option value="-1">HG</option>
         <option value="0">EG</option>
         <option value="1">1. OG</option>
         <option value="2">2. OG</option>
