--- a/resources/views/partials/objects/iso-sm.antlers.html
+++ b/resources/views/partials/objects/iso-sm.antlers.html
@@ -2,7 +2,7 @@
   <defs>
     <style>
       .iso-cls-10 {
-        fill: url(/#UnbenannterVerlauf3) !important;
+        fill: url(/angebot/#UnbenannterVerlauf3) !important;
       }
     </style>
     <linearGradient id="UnbenannterVerlauf3" x1="480.7" y1="344.9" x2="455.9" y2="176.6" gradientUnits="userSpaceOnUse">
