--- a/resources/views/partials/objects/iso-sm.antlers.html
+++ b/resources/views/partials/objects/iso-sm.antlers.html
@@ -1,15 +1,15 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 968.4 479.6" class="{{ class }}">
-  <defs>
+  {{# <defs>
     <style>
       .iso-cls-10 {
-        fill: url(/angebot/#UnbenannterVerlauf3) !important;
+        fill: url("https://staging.adlerstrasse-basel.ch/angebot/#UnbenannterVerlauf3") !important;
       }
     </style>
     <linearGradient id="UnbenannterVerlauf3" x1="480.7" y1="344.9" x2="455.9" y2="176.6" gradientUnits="userSpaceOnUse">
       <stop offset=".1" stop-color="#fff"/>
       <stop offset="1" stop-color="#bbce92"/>
     </linearGradient>
-  </defs>
+  </defs> #}}
   <g data-iso-floor="0">
     <g>
       <g>
