--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -8,14 +8,14 @@
       <p>Boden in Wohnung: Klötzliparkett (Monopark) Eiche, matt versiegelt<br>Nasszellen (Küchen und Waschküche UG): Feinsteinzeugplatten, unglasiert, SABAG Modico, anthrazit</p>
       
       {{ partial:components/headings/h3 title="Wandbeläge und Decken" }}
-      <p>Wände: Raufasertapete weiss gestrichen, in den Nasszellen wo keine Platten vorhanden sind, Weissputz, weiss gestrichen Decken: Weissputzdecken, weiss gestrichen</p>
+      <p>Wände: Raufasertapete weiss gestrichen, in den Nasszellen wo keine Platten vorhanden sind, Weissputz, weiss gestrichen<br>Decken: Weissputzdecken, weiss gestrichen</p>
 
       {{ partial:components/headings/h3 title="Küche" }}
       <p>
-        Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Rückwand: Feinsteigzeugplatten, SABAG Modico, hellgrau Decke: Weissputz, weiss gestrichen<br>Arbeitsplatte: Granit poliert, Steel Gray Küchenfronten/Küchenschränke: Kunstharz, Sandbeige seidenmatt<br>Geräte: Glaskeramik/Induktion, Dunstabzug (Flachschirmhaube), Geschirrspüler, Kühl- und Gefriergerät, Marke Siemens
+        Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Rückwand: Feinsteigzeugplatten, SABAG Modico, hellgrau<br>Decke: Weissputz, weiss gestrichen<br>Arbeitsplatte: Granit poliert, Steel Gray Küchenfronten/Küchenschränke: Kunstharz, Sandbeige seidenmatt<br>Geräte: Glaskeramik/Induktion, Dunstabzug (Flachschirmhaube), Geschirrspüler, Kühl- und Gefriergerät, Marke Siemens
       </p>
       {{ partial:components/headings/h3 title="Badezimmer" }}
-      <p>Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit Wände: Feinsteigzeugplatten, SABAG Modico, beige<br>Decke: Weissputz, weiss gestrichen<br>Sanitärapparate: Keramik weiss, Spiegelschrank weiss Armaturen: Chromeline<br>Duschwanne mit Vorhangschiene oder Badewanne</p>
+      <p>Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Wände: Feinsteigzeugplatten, SABAG Modico, beige<br>Decke: Weissputz, weiss gestrichen<br>Sanitärapparate: Keramik weiss, Spiegelschrank weiss<br>Armaturen: Chromeline<br>Duschwanne mit Vorhangschiene oder Badewanne</p>
 
       {{ partial:components/headings/h3 title="Aussenfläche" }}
       <p>Boden Sitzplatz: Zementplatten<br>Boden Balkon: Betonplatte, Monobeton, sicht<br>Balkongeländer: Hohlprofile Metall, pulverbeschichtet</p>
