--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -30,7 +30,7 @@
       <p>Sonnerie: Gegensprechanlage<br>Küchenmöbel: Einbauspots<br>Glasfaser: in jeder Wohnung, Mieter wählt selbstständig zwischen den Anbietern und schliesst ein Abonnement ab<br>Mehrere dreifach Steckdosen und Schalter in den Räumen, Multimedia-Verteiler im Eingangsbereich</p>
 
       {{ partial:components/headings/h3 title="Heizungs- und Lüftungsanlagen" }}
-      <p>Beheizung mittels Heizkörper, Gasheizung<br>Die Abluft (Küche und Nasszellen) erfolgt über Dach. Frischluftzufuhr über Aussenluftdurchlass über den Fenstern.</p>
+      <p>Beheizung mittels Heizkörper, Gasheizung<br>Die Abluft (Küche und Nasszellen) erfolgt über Dach. Frischluftzufuhr über Aussenluftdurchlass über den Fenstern</p>
 
       {{ partial:components/headings/h3 title="Liftanlagen" }}
       <p>Pro Haus ein Personenaufzug für maximal sechs Personen</p>
@@ -39,7 +39,7 @@
       <p>Pro Wohnung ein Kellerabteil, mit Steckdose auf Wohnungszähler, Schliessung mit Zylinder auf Wohnungsschliessung</p>
 
       {{ partial:components/headings/h3 title="Waschküche und Trocknungsraum" }}
-      <p>Jede Wohnung verfügt im Untergeschoss einen abschliessbaren Waschturm (Waschmaschine und Tumbler), Marke Siemens Trocknungsraum im UG pro Haus mit Secomat</p>
+      <p>Jede Wohnung verfügt im Untergeschoss über eine Waschmaschine und einen Trockner, Marke Siemens. Trocknungsraum im UG pro Haus mit Secomat</p>
 
       {{ partial:components/headings/h3 title="Veloabstellplätze" }}
       <p>Veloräume mit zahlreichen Abstellplätzen, mögliche Ladestationen für E-Bikes (Steckdosen)</p>
