--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -8,7 +8,7 @@
 
 {{ partial:layout/section }}
 {{ partial:layout/inner }}
-  {{ partial:components/headings/h1 title="Wohnen im Bezirk Grossbasel" }}
+  {{ partial:components/headings/h1 title="Wohnen im schönen Gellert" }}
   <div class="max-w-2xl">
     <p>Die Überbauung Adlerstrasse bietet frisch sanierte 1.5- bis 5.5-Zimmerwohnungen an zentraler Lage im Gellert Quartier, Grossbasel, an. Die Wohnungen sind auf vier Häuser verteilt, die hochwertige Materialien sowie vielfältige Grundrissvarianten bieten. Zusätzlich gibt es private Aussenbereiche, Einstellplätze, Bastelräume und einen idyllischen Spielplatz im Hinterhof.</p>
     <p>Die Überbauung zeichnet sich durch ihre ideale Kombination aus städtischer Lage und attraktiver Aussenanlage aus, was Familien, junge Paare und Singles anspricht. Die Nähe zum Rhein, die gute Infrastruktur und die schnelle Anbindung an den öffentlichen Verkehr machen die Adlerstrasse zu einem attraktiven Wohnort für Menschen jeden Alters.</p>
