--- a/resources/views/partials/objects/building.antlers.html
+++ b/resources/views/partials/objects/building.antlers.html
@@ -27,7 +27,7 @@
         {{ /partial:components/table/tcell }}
         {{ partial:components/table/tcell class="text-right" }}
           {{ if {state:available :state="status" :reserved="reserved"} }}
-            {{ rent_gross | format_number(2, '.', '\'') }}
+            {{ price_display | format_number(2, '.', '\'') }}
           {{ /if }}
         {{ /partial:components/table/tcell }}
         {{ partial:components/table/tcell class="text-center" }}
