--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -12,7 +12,7 @@
 
       {{ partial:components/headings/h3 title="Küche" }}
       <p>
-        Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Rückwand: Feinsteigzeugplatten, SABAG Modico, hellgrau<br>Decke: Weissputz, weiss gestrichen<br>Arbeitsplatte: Granit poliert, Steel Gray Küchenfronten/Küchenschränke: Kunstharz, Sandbeige seidenmatt<br>Geräte: Glaskeramik/Induktion, Dunstabzug (Flachschirmhaube), Geschirrspüler, Kühl- und Gefriergerät, Marke Siemens
+        Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Rückwand: Feinsteigzeugplatten, SABAG Modico, hellgrau<br>Decke: Weissputz, weiss gestrichen<br>Arbeitsplatte: Granit poliert, Steel Gray Küchenfronten/Küchenschränke: Kunstharz, Sandbeige seidenmatt<br>Geräte: Glaskeramik, Dunstabzug (Flachschirmhaube), Geschirrspüler, Kühl- und Gefriergerät, Marke Siemens
       </p>
       {{ partial:components/headings/h3 title="Badezimmer" }}
       <p>Bodenbeläge: Feinsteigzeugplatten, SABAG Modico, anthrazit<br>Wände: Feinsteigzeugplatten, SABAG Modico, beige<br>Decke: Weissputz, weiss gestrichen<br>Sanitärapparate: Keramik weiss, Spiegelschrank weiss<br>Armaturen: Chromeline<br>Duschwanne mit Vorhangschiene oder Badewanne</p>
@@ -59,7 +59,7 @@
       <div class="mt-15 lg:mt-30 flex space-x-15 lg:space-x-25">
         <div>
           <a 
-            href="/assets/downloads/adlerstrasse-basel-kurzbaubeschrieb.pdf" 
+            href="/assets/downloads/adlerstrasse-basel-kurzbaubeschrieb_v2.pdf" 
             target="_blank" 
             title="Kurzbaubeschrieb"
             class="bg-steel text-white px-15 py-10 lg:px-16 lg:py-12 rounded-sm uppercase font-lato-black font-black tracking-wider flex items-center w-full justify-center hover:brightness-110 hover:text-cloud transition-all">
