--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -80,10 +80,11 @@
 
       {{ partial:layout/span }}
         {{ partial:components/media/image image="adlerstrasse-basel-5" alt="" wrapperClass="mb-20 lg:mb-40" }}
-        {{ partial:components/media/image image="adlerstrasse-basel-6" alt="" wrapperClass="mb-20 lg:mb-40" }}
+        {{ partial:components/media/image image="adlerstrasse-basel-12" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-9" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-7" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-8" alt="" wrapperClass="mb-20 lg:mb-40" }}
+        {{ partial:components/media/image image="adlerstrasse-basel-6" alt="" }}
       {{ /partial:layout/span }}
 
     {{ /partial:layout/grid }}
