--- a/resources/views/partials/layout/head.antlers.html
+++ b/resources/views/partials/layout/head.antlers.html
@@ -26,6 +26,6 @@
 {{ vite src="resources/css/app.css" }}
 {{ livewire:styles }}
 </head>
-{{ if debug }}
+{{# {{ if debug }}
   {{ partial:layout/breakpoints }}
-{{ /if }}
+{{ /if }} #}}
