--- a/resources/views/ausbau.antlers.html
+++ b/resources/views/ausbau.antlers.html
@@ -79,7 +79,7 @@
       {{ /partial:layout/span }}
 
       {{ partial:layout/span }}
-        {{ partial:components/media/image image="adlerstrasse-basel-5" alt="" wrapperClass="mb-20 lg:mb-40" }}
+        {{ partial:components/media/image image="adlerstrasse-basel-2025-4" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-12" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-9" alt="" wrapperClass="mb-20 lg:mb-40" }}
         {{ partial:components/media/image image="adlerstrasse-basel-7" alt="" wrapperClass="mb-20 lg:mb-40" }}
