--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -1,8 +1,8 @@
 {{ partial:layout/section }}
   {{ partial:components/swiper/wrapper }}
-    {{ partial:components/swiper/slide image="adlerstrasse-basel-1" alt="" }}
-    {{ partial:components/swiper/slide image="adlerstrasse-basel-2" alt="" }}
-    {{ partial:components/swiper/slide image="adlerstrasse-basel-3" alt="" }}
+    {{ partial:components/swiper/slide image="adlerstrasse-basel-2025-1" alt="" }}
+    {{ partial:components/swiper/slide image="adlerstrasse-basel-2025-2" alt="" }}
+    {{ partial:components/swiper/slide image="adlerstrasse-basel-2025-3" alt="" }}
   {{ /partial:components/swiper/wrapper }}
 {{ /partial:layout/section }}
 
