--- a/resources/views/kontakt.antlers.html
+++ b/resources/views/kontakt.antlers.html
@@ -1,5 +1,5 @@
 {{ partial:layout/section }}
-  {{ partial:components/media/visual image="adlerstrasse-basel-3" alt="" }}
+  {{ partial:components/media/visual image="adlerstrasse-basel-2025-5" alt="" }}
 {{ /partial:layout/section }}
 
 {{ partial:layout/section class="bg-cloud" }}
